force-app/main/default/objects/Policy_Acknowledgement__c/Policy_Acknowledgement__c.object-meta.xml
<CustomObject>
    <label>Policy Acknowledgement</label>
    <nameField>
        <displayFormat>ACK-{0000}</displayFormat>
        <label>Acknowledgement Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Policy Acknowledgements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>