force-app/main/default/objects/Policy_Acknowledgement__c/fields/Policy__c.field-meta.xml
<CustomField>
    <fullName>Policy__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Policy</label>
    <referenceTo>Policy__c</referenceTo>
    <relationshipLabel>Policy Acknowledgements</relationshipLabel>
    <relationshipName>Policy_Acknowledgements</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>